<resources>
    <string name="app_name">健康养生</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="takephoto">拍一拍</string>
    <string name="detection">体质检测</string>
    <string name="nurse">健康养生</string>
    <string name="user">我的</string>

    <string name="material">原料</string>
    <string name="collection">我收藏的营养搭配</string>
    <string name="labelcollocation">相关的营养搭配</string>
    <string name="recommend">宜吃</string>
    <string name="badrecommend">忌吃</string>

    <string name="meiyou">没有</string>
    <string name="henshao">很少</string>
    <string name="youshi">有时</string>
    <string name="jingchang">经常</string>
    <string name="zongshi">总是</string>

    <string name="myphysique">我的体质</string>
    <string name="detectionexplain">根据国家中医学会发布 《 中医体质分类与判定 》 体质相关疾病的防治测试时将自动保存，、养生保健等提供依据。不适用于孕妇，请耐心作答呦</string>
    <string name="detectiontitle">测试说明</string>


    <string name="registerstr">注册</string>
    <string name="registerhintccount">请输入注册昵称</string>
    <string name="registerhintpassword">请输入注册密码</string>
    <string name="loginhintccount">请输入您的昵称</string>
    <string name="loginhintpassword">请输入您的密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="signout">退出登录</string>
    <string name="register">没有帐号？ 去注册</string>
    <string name="mycollocation">我的收藏</string>
    <string name="myinfo">我的信息</string>
    <string name="changeinfo">修改信息</string>

    <string name="loading">正在加载数据</string>

    <string name="tizhiceshi">体质测试</string>
    <string name="jiankangguanli">健康管理</string>
    <string name="chongxin">重新测试</string>
    <string name="weishengsupaihang">维生素排行</string>
    <string name="kuangwuzhi">矿物质排行</string>
    <string name="changshi">饮食常识</string>
    <string name="intotoday">进入今天的的营养搭配</string>
</resources>
