<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".fragment.MyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdv_user_picture"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            fresco:roundAsCircle="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_5"
                android:clickable="true"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_5"
                    android:clickable="true"
                    android:text="@string/register"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_marginBottom="@dimen/dp_3"
            android:id="@+id/collection_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_5"
            android:background="@drawable/card_shape">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_collection"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:text="@string/mycollocation"
                android:textSize="18dp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/myinfo_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_5"
            android:background="@drawable/card_shape">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_collection"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:text="@string/myinfo"
                android:textSize="18dp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_info_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_5"
            android:background="@drawable/card_shape">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_collection"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:text="@string/changeinfo"
                android:textSize="18dp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_huge"
            android:paddingBottom="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/signout"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"/>

    </LinearLayout>


</LinearLayout>