<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".activity.LabelDetailActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_label_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:navigationIcon="@drawable/back">

        <TextView
            android:id="@+id/toolbar_label_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </android.support.v7.widget.Toolbar>



        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TextView
        android:id="@+id/introduce_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/recommend"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/colornormal"/>
    <TextView
        android:id="@+id/recommend_fine_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recommend_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </android.support.v7.widget.RecyclerView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/badrecommend"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/colornormal"/>
    <TextView
        android:id="@+id/recommend_bad_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/badrecommend_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>


    <Button
        android:id="@+id/collocation_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelcollocation"
        android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>



</LinearLayout>